test/classes/initializers/oldAndNew.good
oldAndNew.chpl:8: note: Constructors have been deprecated as of Chapel 1.18. Please use initializers instead.
oldAndNew.chpl:8: error: Type 'badClass' defines a constructor here
